# mcp-context-budget

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/runbooks/: pypi-release.md
mcp_context_budget/: __init__.py  __main__.py  budget.py  cli.py  compress.py  config_audit.py  config_edit.py  demo.py  live_stdio.py  loaders.py  models.py  reporting.py  selector.py  semantic.py  tokens.py
scripts/: verify-v04.sh
specs/: stdio-framing-compat-spec.md
tests/: test_cli.py  test_compress.py  test_config_audit.py  test_config_contract.py  test_config_edit.py  test_core.py  test_live_compress.py  test_live_stdio.py  test_semantic.py
