[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-context-budget"
version = "0.1.0"
description = "Local-first MCP context budget and tool-selection verifier"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dan Mercede", email = "dan@danmercede.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
mcp-context-budget = "mcp_context_budget.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_context_budget*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
